--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-cli": "^6.18.0"
   },
   "dependencies": {
+    "jquery": "^3.1.1",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
