--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "react-router": "^2.8.1",
-    "react-spinkit": "^1.1.11"
+    "react-spinkit": "^1.1.11",
+    "sweetalert": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
