--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first-proto",
+  "name": "NotifyMe",
   "version": "0.1.0",
   "private": true,
   "main": "index.html",
@@ -14,7 +14,8 @@
     "react-dom": "^15.4.1",
     "react-router": "^2.8.1",
     "react-spinkit": "^1.1.11",
-    "sweetalert": "^1.1.3"
+    "sweetalert": "^1.1.3",
+    "watchify": "^3.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
